# Huffman

./: dune-project  huffman.opam  shell.nix
lib/: dune  heap.ml  heap.mli  huffman.ml  huffman.mli
test/: dune  test_huffman.ml
